# mcu_bsdiff_upgrade

./: CMakeLists.txt  README.md  conanfile.py  user_interface.c  user_interface.h
bsdiff/: bspatch.c  bspatch.h  vFile.c  vFile.h
lib/: crc32.c  crc32.h  mylib.c  mylib.h
lzma/: 7zFile.h  LzFind.c  LzmaDec.c  LzmaEnc.c  Precomp.h  lzma_decompress.c  lzma_decompress.h
user/: bs_type.h  bs_user_interface.c  bs_user_interface.h
